# SUML_4

./: .gitattributes  .gitignore  Czysczenie.py  README.md  Train.py  Wstepna_analiza.py  app.py  data_processing.py  environment.yml  pyproject.toml  requirements.txt
AutogluonModels_raw/: learner.pkl  metadata.json
AutogluonModels_raw/models/: trainer.pkl
AutogluonModels_raw/utils/data/: X_val.pkl  y.pkl  y_val.pkl
Data/: ai_job_dataset_clean.csv
Data/clean_data/: ai_job_dataset_clean.csv
Data/models/: learner.pkl  metadata.json  models.csv  predictor.pkl
Data/models/models/: trainer.pkl
Data/models/models/CatBoost/: model.pkl
Data/models/models/ExtraTreesMSE/: model.pkl
Data/models/models/LightGBM/: model.pkl
Data/models/models/LightGBMLarge/: model.pkl
Data/models/models/LightGBMXT/: model.pkl
Data/models/models/NeuralNetFastAI/: model-internals.pkl  model.pkl
Data/models/models/NeuralNetTorch/: model.pkl
Data/models/models/RandomForestMSE/: model.pkl
Data/models/models/WeightedEnsemble_L2/: model.pkl
Data/models/models/WeightedEnsemble_L2/utils/: model_template.pkl  oof.pkl
Data/models/models/XGBoost/: model.pkl  xgb.ubj
Data/models/utils/attr/CatBoost/: y_pred_proba_val.pkl
Data/models/utils/attr/ExtraTreesMSE/: y_pred_proba_val.pkl
Data/models/utils/attr/LightGBM/: y_pred_proba_val.pkl
Data/models/utils/attr/LightGBMLarge/: y_pred_proba_val.pkl
Data/models/utils/data/: X.pkl  X_val.pkl  y.pkl  y_val.pkl
Data/models_scores/: models.csv
connector/: Connector.py
streamlit/: AiJobPage.py
(+5 files in other folders)
