[project]
name = "suml-4"
version = "0.1.0"
description = ""
authors = [
    {name = "KW28042"}
]
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "numpy (>=1.25.0,<2.3.0)",
    "autogluon (>=1.4.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "streamlit (>=1.52.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
